@@ -60,6 +60,7 @@ ALL CHANGES:
   TEZ-1638. Fix Missing type parametrization in runtime Input/Output configs.
   TEZ-1596. Secure Shuffle utils is extremely expensive for fast queries.
   TEZ-1712. SSL context gets destroyed too soon after downloading data from one of the vertices.
+  TEZ-1710. Add support for cluster default AM/task launch opts.
 
 Release 0.5.1: 2014-10-02
 
